Fix buildspec and package.json for CodePipeline

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,18 @@ phases:
   install:
     commands:
       - echo Installing dependencies...
+      - cd react-app
       - npm install
   build:
     commands:
-      - echo Building React app...
+      - echo Build started...
+      - cd react-app
       - npm run build
 artifacts:
   files:
     - '**/*'
-  base-directory: build
+  base-directory: react-app/build
+
+cache:
+  paths:
+    - 'react-app/node_modules/**/*'
